# ibmcloud-agents

./: .env.example  .env.ibmcloud.example  .env.supervisor.example  .gitignore  Dockerfile  Makefile  README.md  agent.yaml  ibmcloud_mcp_account_admin_config.json  ibmcloud_mcp_base_agent_config.json  ibmcloud_mcp_cloud_automation_agent_config.json  ibmcloud_mcp_guide_agent_config.json  ibmcloud_mcp_serverless_agent_config.json  pyproject.toml  run.sh  run_web.sh  start.sh
.mcp/ibmcloud/: resource_manager.json  serverless_developer.json  vpc_network_engineer.json
a2a_server/tasks/handlers/chuk/: chuk_agent.py
docs/: IBM_CLOUD_SERVICES.md  README.md  team-management.md
docs/agents/: README.md
docs/design/images/: code2flow.dot
docs/docs/design/images/: a2a_code2flow.dot
docs/docs/test/: licenses.md
docs/examples/: kingsmen_curl_examples.sh
docs/metrics/: loc.md
docs/tutorials/: KINGSMEN_CURL_TUTORIAL.md
ibmcloud_base_agent/: agent.py
src/: ibmcloud_mcp_account_admin_config.json  ibmcloud_mcp_account_config.json  ibmcloud_mcp_base_agent_config.json  ibmcloud_mcp_cloud_automation_config.json  ibmcloud_mcp_guide_agent_config.json  ibmcloud_mcp_guide_config.json  ibmcloud_mcp_serverless_agent_config.json  ibmcloud_mcp_serverless_config.json
src/common/: services.py  simple_a2a_client.py
src/ibmcloud_account_admin_agent/: agent.py
src/ibmcloud_base_agent/: agent.py  main.py
src/ibmcloud_cloud_automation_agent/: __init__.py  agent.py  main.py
src/ibmcloud_guide_agent/: agent.py
src/ibmcloud_serverless_agent/: agent.py
src/kingsmen_agent/: README.md  __init__.py  agent.py  kingsmen_handler.py  main.py
src/supervisor_agent/: README.md  agent.py  main.py  supervisor_handler.py  team_management.py
tests/: __init__.py  conftest.py  run_tests.py
tests/fixtures/: sample_data.json
tests/integration/: test_agent_startup.py
tests/unit/agents/: test_base_agent.py
tests/unit/common/: test_services.py  test_simple_a2a_client.py  test_types.py
tests/unit/supervisor_agent/: __init__.py  test_team_management.py
