[project]
name = "ibmcloud-base-agent"
version = "0.1.0"
description = "IBMCloud Base Agent (A2A & MCP-compliant)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-server>=0.2",
    "chuk-llm==0.1.8",
    "chuk-mcp>=0.2.2",
    "litellm>=1.67.0",
    "python-dotenv>=1.1.0",
]
# Optional dependency groups (development)
#dev = [
#]

# Convenience meta-extras
#all = ["ibmcloud_base_agent"]
#dev-all = ["ibmcloud_base_agent[dev]"]

# --------------------------------------------------------------------
#  Authors and URLs
# --------------------------------------------------------------------
[[project.authors]]
name = "Christopher C Mitchell"
email = "redacted@ibm.com"

[project.urls]
Homepage = "https://github.com/ccmitchellusa/ibmcloud-base-agent"
Documentation = "https://github.com/ccmitchellusa/ibmcloud-base-agent"
Repository = "https://github.com/ccmitchellusa/ibmcloud-base-agent"
"Bug Tracker" = "https://github.com/ccmitchellusa/ibmcloud-base-agent/issues"
Changelog = "https://github.com/ccmitchellusa/ibmcloud-base-agent/blob/main/CHANGELOG.md"

# --------------------------------------------------------------------
#  🔧 setuptools-specific configuration
# --------------------------------------------------------------------
[tool.setuptools]
include-package-data = true          # ensure wheels include the data files

# Automatic discovery: keep every package that starts with "mcpgateway"
[tool.setuptools.packages.find]
include = ["ibmcloud-base-agent*"]
exclude = ["tests*"]

##  Runtime data files  ------------------------------------------------
#  - py.typed  -> advertises inline type hints (PEP 561)
#  - static/*  -> CSS/JS for the admin UI
#  - templates -> Jinja2 templates shipped at runtime
#[tool.setuptools.package-data]
#ibmcloud-base-agent = [
#  "py.typed",
#]
# --------------------------------------------------------------------
#  🛠  Tool configurations (black, mypy, etc.)
# --------------------------------------------------------------------
[tool.pytype]
# Directory-specific options:
inputs = ["ibmcloud-base-agent"]
python_version = "3.11"          # match default runtime

[tool.check-manifest]
ignore = [
    "docs/**",
    "tests/**",
    ".github/**",
    "Makefile",
]

[tool.black]
line-length = 200
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=ibmcloud-base-agent"
testpaths = [ "tests",]
asyncio_mode = "auto"

# ── fawltydeps ─────────────────────────────────────────────────────
[tool.fawltydeps]
# only parse main pyproject.toml
deps = ["pyproject.toml"]

# ignore 'dev' extras so they won't show up in fawltydeps
ignore_unused = [
  "autoflake",
  "argparse-manpage",
  "bandit",
  "black",
  "bump2version",
  "check-manifest",
  "code2flow",
  "cookiecutter",
  "coverage",
  "coverage-badge",
  "darglint",
  "flake8",
  "fawltydeps",
  "gprof2dot",
  "gunicorn",
  "importchecker",
  "isort",
  "ty",
  "mypy",
  "pexpect",
  "pip-licenses",
  "pip_audit",
  "pre-commit",
  "pydocstyle",
  "pylint",
  "pylint-pydantic",
  "pyre-check",
  "pyright",
  "pyroma",
  "pyspelling",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-examples",
  "pytest-md-report",
  "pytest-rerunfailures",
  "pytest-xdist",
  "pytype",
  "radon",
  "ruff",
  "settings-doc",
  "snakeviz",
  "types-tabulate",
  "twine",
  "uvicorn"
]
